[tool.black]
line-length = 88

[tool.poetry]
name = "stack_overflow_importer"
version = "0.1.0"
description = "Tool to import Stack Overflow questions"
authors = ["Julien Chappuis <jubijub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"
colorama = "^0.4.4"
StrEnum = "^0.4.7"
coloredlogs = "^15.0.1"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
s-o-i="so_updater:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: live integration tests calling SO API. Deselect to save quota."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
